# cortivus-docling-parser

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: chunker.py  parser.py
docs/: prd-docling-parser.md
output/: JQPS_1_15_test.json
scripts/: requirements.txt  test_parser.bat  test_parser.py
